# bitcoin-blk-reader

./: Cargo.toml
src/: bitcoin_rest.rs  blk_reader.rs  lib.rs
src/script/: snapshot.sh
