[package]
name = "bitcoin-blk-reader"
version = "0.0.3"
edition = "2024"
description = "Bitcoin blk*.dat reader"
license = "MIT"
repository = "https://github.com/visvirial/bitcoin-blk-reader"

[dependencies]
hex = "0.4.3"
bytes = "1.10.1"
num-format = "0.4.4"
tokio = { version = "1.44.1", features = ["rt", "macros"] }
reqwest = "0.12.14"
bitcoin_hashes = "0.16.0"

[[bin]]
name = "gen_bootstrap_dat"
path = "src/bin/gen_bootstrap_dat.rs"

[[bin]]
name = "test_blk_reader"
path = "src/bin/test_blk_reader.rs"
